Fix signup anchor to work better on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -497,6 +497,13 @@ header .intro-statement .hashtag {
    SECTION:  SIGNUP
 -----------------------------------------*/
 
+#signup {
+  /*  HACK FOR ANCHOR (http://stackoverflow.com/questions/10732690/offsetting-an-html-anchor-to-adjust-for-fixed-header) */
+  padding-top: 75px; 
+  margin-top: -75px;
+}
+
+
 .signup {
   background: rgb(250, 251, 241) url(../images/signup-bg.jpg) no-repeat bottom right;
   padding-bottom: 200px;
